# emd-desafio-junior-data-scientist

./: .pre-commit-config.yaml  Dockerfile  README.Docker.md  README.MD  README.md  README2.md  analise_api.ipynb  analise_python.ipynb  analise_python.md  analise_python.py  analise_sql.md  analise_sql.sql  compose.yaml  dados_Chamados_1746.ipynb  dados_analises.ipynb  faq.md  perguntas_api.md  perguntas_desafio.md  perguntas_sql.md  pyproject.toml  q1-5.py  q6-10.py  relatorio_chamados.pbix  requirements.txt  streamlit_app.py  styles.css
.dvc/: config
.streamlit/: config.toml
Dashboard/: funcoes.py  querys.py  view.py
analises/: visualizacao_desafio.ipynb
dashboards/: chamados_em_um_dia.py  chamados_perturbacao_sossego.py  chamados_por_subtipo.py
data/: .gitignore  bairro.parquet.dvc  chamado_1746.parquet.dvc  rede_hoteleira_ocupacao_eventos.parquet.dvc
desafio/: README.md  analise_python.ipynb  analise_python.md  analise_sql.sql  requirements.txt
dicionario-dados/: bairro.json  chamado_1746.json  rede_hoteleira_ocupacao_eventos.json
notebooks/: README.md  analise_chamados_encerrados.ipynb  analise_chamados_encerrados.md  analise_exploratoria.ipynb  requirements.txt  visualizacao_desafio.ipynb
src/: plots.py  utils.py
src/dashboards/: analise_bairros.py  analise_diaria.py  analise_por_bairros.py  analise_subtipo.py  chamados_em_um_dia.py  chamados_por_subtipo.py
src/mypages/: analise_python.py  analise_sql.py  homepage.py  queries_python_page.py  queries_sql_page.py
